<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/bt_power"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="clickPowerButton"
        android:text="@string/fan_power" />

    <Button
        android:id="@+id/bt_swing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fan_swing" />

    <Button
        android:id="@+id/bt_speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fan_speed" />

    <Button
        android:id="@+id/timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fan_timer" />

    <Button
        android:id="@+id/rhythm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fan_rhythm" />

</LinearLayout>