<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.viettel.vht.remoteapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

<!--    <fragment-->
<!--        android:id="@+id/nav_remote_control"-->
<!--        android:name="com.viettel.vht.remoteapp.ui.remotecontrol.RemoteControlFragment"-->
<!--        android:label="@string/menu_remote_control"-->
<!--        tools:layout="@layout/fragment_remote_control" >-->
<!--    </fragment>-->

<!--    <fragment-->
<!--        android:id="@+id/nav_air_remote_control"-->
<!--        android:name="com.viettel.vht.remoteapp.ui.remotecontrol.AirRemoteControl"-->
<!--        android:label="@string/menu_air_remote_control"-->
<!--        tools:layout="@layout/fragment_air_remote_control" >-->
<!--    </fragment>-->
    <fragment
        android:id="@+id/nav_air_purifier"
        android:name="com.viettel.vht.remoteapp.ui.airpurifier.AirPurifierFragment"
        android:label="@string/test"
        tools:layout="@layout/fragment_air_purifier_home" />


    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.viettel.vht.remoteapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.viettel.vht.remoteapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.viettel.vht.remoteapp.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.viettel.vht.remoteapp.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.viettel.vht.remoteapp.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>